--- a/resources/sass/frontend.scss
+++ b/resources/sass/frontend.scss
@@ -69,8 +69,8 @@ html {
                                 }
 
                                 a {
-                                    font-family: $font-family-jomolhari;
-                                    font-size: 1.7rem;
+                                    font-family: $font-family-headings;
+                                    font-size: 2rem;
                                     font-weight: 700;
                                     text-transform: initial;
                                     width: auto;
@@ -374,8 +374,8 @@ html.sticky-header-active .header-logo {
 
             h4 {
                 color: $cream;
-                font-size: 2.0rem;
-                line-height: 1.6;
+                font-size: 2.3rem;
+                line-height: 1.3;
             }
 
             h4 + p {
@@ -482,8 +482,8 @@ html.sticky-header-active .header-logo {
             align-self: flex-end;
             background-color: $white !important;
             display: inline-block;
-            font-family: $font-family-jomolhari;
-            $font-size: 1.8rem;
+            font-family: $font-family-headings;
+            font-size: 1.8rem;
             font-weight: 700;
             line-height: 1.5;
         }
