--- a/public/admin/assets/css/admin.css
+++ b/public/admin/assets/css/admin.css
@@ -179,8 +179,8 @@ $button-bg-hover-color: $black !default;
 $button-bg-hover-color-dark: $black !default; */
 * {
   font-family: "Roboto", sans-serif;
-  -webkit-font-smoothing: subpixel-antialiased !important;
-  text-rendering: optimizeLegibility !important;
+  /* -webkit-font-smoothing: subpixel-antialiased !important;
+  text-rendering: optimizeLegibility !important; */
 }
 
 body * {
@@ -194,7 +194,7 @@ img {
 .h1 {
   line-height: 1.3;
   color: #000000;
-  font-family: Jomolhari;
+  font-family: "freight-text-pro";
   font-weight: 700;
   text-transform: initial;
 }
@@ -202,7 +202,7 @@ img {
 .h2 {
   line-height: 1.3;
   color: #000000;
-  font-family: Jomolhari;
+  font-family: "freight-text-pro";
   font-weight: 700;
   text-transform: initial;
 }
@@ -210,7 +210,7 @@ img {
 .h3 {
   line-height: 1.3;
   color: #000000;
-  font-family: Jomolhari;
+  font-family: "freight-text-pro";
   font-weight: 700;
   text-transform: initial;
 }
@@ -218,7 +218,7 @@ img {
 .h4 {
   line-height: 1.3;
   color: #000000;
-  font-family: Jomolhari;
+  font-family: "freight-text-pro";
   font-weight: 700;
   text-transform: initial;
 }
@@ -226,7 +226,7 @@ img {
 .h5 {
   line-height: 1.3;
   color: #000000;
-  font-family: Jomolhari;
+  font-family: "freight-text-pro";
   font-weight: 700;
   text-transform: initial;
 }
@@ -234,7 +234,7 @@ img {
 .h6 {
   line-height: 1.3;
   color: #000000;
-  font-family: Jomolhari;
+  font-family: "freight-text-pro";
   font-weight: 700;
   text-transform: initial;
 }
@@ -242,7 +242,7 @@ img {
 h1 {
   line-height: 1.3;
   color: #000000;
-  font-family: Jomolhari;
+  font-family: "freight-text-pro";
   font-weight: 700;
   text-transform: initial;
 }
@@ -250,7 +250,7 @@ h1 {
 h2 {
   line-height: 1.3;
   color: #000000;
-  font-family: Jomolhari;
+  font-family: "freight-text-pro";
   font-weight: 700;
   text-transform: initial;
 }
@@ -258,7 +258,7 @@ h2 {
 h3 {
   line-height: 1.3;
   color: #000000;
-  font-family: Jomolhari;
+  font-family: "freight-text-pro";
   font-weight: 700;
   text-transform: initial;
 }
@@ -266,7 +266,7 @@ h3 {
 h4 {
   line-height: 1.3;
   color: #000000;
-  font-family: Jomolhari;
+  font-family: "freight-text-pro";
   font-weight: 700;
   text-transform: initial;
 }
@@ -274,7 +274,7 @@ h4 {
 h5 {
   line-height: 1.3;
   color: #000000;
-  font-family: Jomolhari;
+  font-family: "freight-text-pro";
   font-weight: 700;
   text-transform: initial;
 }
@@ -282,7 +282,7 @@ h5 {
 h6 {
   line-height: 1.3;
   color: #000000;
-  font-family: Jomolhari;
+  font-family: "freight-text-pro";
   font-weight: 700;
   text-transform: initial;
 }
