--- a/public/admin/assets/css/admin.css
+++ b/public/admin/assets/css/admin.css
@@ -194,7 +194,7 @@ img {
 .h1 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -202,7 +202,7 @@ img {
 .h2 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -210,7 +210,7 @@ img {
 .h3 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -218,7 +218,7 @@ img {
 .h4 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -226,7 +226,7 @@ img {
 .h5 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -234,7 +234,7 @@ img {
 .h6 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -242,7 +242,7 @@ img {
 h1 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -250,7 +250,7 @@ h1 {
 h2 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -258,7 +258,7 @@ h2 {
 h3 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -266,7 +266,7 @@ h3 {
 h4 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -274,7 +274,7 @@ h4 {
 h5 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -282,7 +282,7 @@ h5 {
 h6 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -368,7 +368,7 @@ a:hover {
 }
 
 .btn, .swal2-popup .swal2-styled.swal2-confirm {
-  background-color: #4d5877;
+  background-color: #36487b;
   border-radius: 50px;
   color: #ffffff;
   font-size: 1.6rem;
@@ -455,7 +455,7 @@ a:hover {
   color: #ffffff;
 }
 .ra__dark .btn-success, .ra__dark .swal2-popup .swal2-styled.swal2-confirm, .swal2-popup .ra__dark .swal2-styled.swal2-confirm, .ra__dark .btn-primary, .ra__dark .btn-danger, .ra__dark .btn-info {
-  background-color: #4d5877;
+  background-color: #36487b;
   color: #ffffff;
 }
 .ra__dark .btn-success:hover, .ra__dark .swal2-popup .swal2-styled.swal2-confirm:hover, .swal2-popup .ra__dark .swal2-styled.swal2-confirm:hover, .ra__dark .btn-primary:hover, .ra__dark .btn-danger:hover, .ra__dark .btn-info:hover {
@@ -466,26 +466,26 @@ a:hover {
   background-color: #000000;
 }
 .btn-success, .swal2-popup .swal2-styled.swal2-confirm {
-  background-color: #4d5877;
+  background-color: #36487b;
 }
 .btn-success:hover, .swal2-popup .swal2-styled.swal2-confirm:hover {
   background-color: #000000;
 }
 .ra__dark .btn-success, .ra__dark .swal2-popup .swal2-styled.swal2-confirm, .swal2-popup .ra__dark .swal2-styled.swal2-confirm {
-  background-color: #793B52;
+  background-color: #9e3a5f;
   color: #000000;
 }
 .ra__dark .btn-success:hover, .ra__dark .swal2-popup .swal2-styled.swal2-confirm:hover, .swal2-popup .ra__dark .swal2-styled.swal2-confirm:hover {
   background-color: #000000;
 }
 .btn-primary {
-  background-color: #4d5877;
+  background-color: #36487b;
 }
 .btn-primary:hover {
   background-color: #000000;
 }
 .ra__dark .btn-primary {
-  background-color: #793B52;
+  background-color: #9e3a5f;
   color: #000000;
 }
 .ra__dark .btn-primary:hover {
@@ -505,7 +505,7 @@ a:hover {
   color: #ffffff;
 }
 .btn-info {
-  background-color: #4d5877;
+  background-color: #36487b;
   color: #ffffff;
 }
 .btn-info:hover {
@@ -513,7 +513,7 @@ a:hover {
   color: #ffffff;
 }
 .ra__dark .btn-info {
-  background-color: #793B52;
+  background-color: #9e3a5f;
 }
 .ra__dark .btn-info:hover {
   background-color: #000000;
