--- a/public/website/assets/css/frontend.css
+++ b/public/website/assets/css/frontend.css
@@ -210,7 +210,7 @@ img {
 .h1 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -218,7 +218,7 @@ img {
 .h2 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -226,7 +226,7 @@ img {
 .h3 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -234,7 +234,7 @@ img {
 .h4 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -242,7 +242,7 @@ img {
 .h5 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -250,7 +250,7 @@ img {
 .h6 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -258,7 +258,7 @@ img {
 h1 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -266,7 +266,7 @@ h1 {
 h2 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -274,7 +274,7 @@ h2 {
 h3 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -282,7 +282,7 @@ h3 {
 h4 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -290,7 +290,7 @@ h4 {
 h5 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -298,7 +298,7 @@ h5 {
 h6 {
   line-height: 1.3;
   color: #000000;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-weight: 700;
   text-transform: initial;
 }
@@ -471,7 +471,7 @@ a:hover {
   color: #ffffff;
 }
 .ra__dark .btn-success, .ra__dark .swal2-popup .swal2-styled.swal2-confirm, .swal2-popup .ra__dark .swal2-styled.swal2-confirm, .ra__dark .btn-primary, .ra__dark .btn-danger, .ra__dark .btn-info {
-  background-color: #4d5877;
+  background-color: #36487b;
   color: #ffffff;
 }
 .ra__dark .btn-success:hover, .ra__dark .swal2-popup .swal2-styled.swal2-confirm:hover, .swal2-popup .ra__dark .swal2-styled.swal2-confirm:hover, .ra__dark .btn-primary:hover, .ra__dark .btn-danger:hover, .ra__dark .btn-info:hover {
@@ -482,26 +482,26 @@ a:hover {
   background-color: #c60202 !important;
 }
 .btn-success, .swal2-popup .swal2-styled.swal2-confirm {
-  background-color: #4d5877;
+  background-color: #36487b;
 }
 .btn-success:hover, .swal2-popup .swal2-styled.swal2-confirm:hover {
   background-color: #000000;
 }
 .ra__dark .btn-success, .ra__dark .swal2-popup .swal2-styled.swal2-confirm, .swal2-popup .ra__dark .swal2-styled.swal2-confirm {
-  background-color: #793B52;
+  background-color: #9e3a5f;
   color: #000000;
 }
 .ra__dark .btn-success:hover, .ra__dark .swal2-popup .swal2-styled.swal2-confirm:hover, .swal2-popup .ra__dark .swal2-styled.swal2-confirm:hover {
   background-color: #000000;
 }
 .btn-primary {
-  background-color: #4d5877;
+  background-color: #36487b;
 }
 .btn-primary:hover {
   background-color: #000000;
 }
 .ra__dark .btn-primary {
-  background-color: #793B52;
+  background-color: #9e3a5f;
   color: #000000;
 }
 .ra__dark .btn-primary:hover {
@@ -529,7 +529,7 @@ a:hover {
   color: #ffffff !important;
 }
 .ra__dark .btn-info {
-  background-color: #793B52;
+  background-color: #9e3a5f;
 }
 .ra__dark .btn-info:hover {
   background-color: #000000;
@@ -626,7 +626,7 @@ html #header .header-nav-links nav > ul {
   }
 }
 html #header .header-nav-links nav > ul > li a {
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-size: 2rem;
   font-weight: 700;
   text-transform: initial;
@@ -656,7 +656,7 @@ html #header .header-nav-links nav > ul:not(:hover) > li > a.active {
   color: #f1556c !important;
 }
 html #header .header-btn-collapse-nav {
-  background: #4d5877;
+  background: #36487b;
 }
 @media (max-width: 991px) {
   html #header .header-column-logo {
@@ -930,10 +930,10 @@ html.sticky-header-active .header-logo img {
   line-height: 1.5;
 }
 .mf__features--benefits {
-  background-color: #793B52;
+  background-color: #9e3a5f;
 }
 .mf__features--services {
-  background-color: #4d5877;
+  background-color: #36487b;
 }
 .mf__features--services div.mf__features__row {
   background-color: rgba(0, 0, 0, 0.1);
@@ -1021,7 +1021,7 @@ html.sticky-header-active .header-logo img {
   align-self: flex-end;
   background-color: #ffffff !important;
   display: inline-block;
-  font-family: "freight-text-pro";
+  font-family: "Alegreya", serif;
   font-size: 1.8rem;
   font-weight: 700;
   line-height: 1.5;
