--- a/public/admin/assets/css/admin.css
+++ b/public/admin/assets/css/admin.css
@@ -194,6 +194,10 @@ img {
   display: block;
 }
 
+.font-size-2rem {
+  font-size: 2rem;
+}
+
 .h1 {
   line-height: 1.3;
   color: #000000;
@@ -353,7 +357,7 @@ a:hover {
   color: #f1556c !important;
 }
 .form-group {
-  margin-bottom: 2rem;
+  margin-bottom: 30px;
 }
 .form-group:last-of-type {
   margin-bottom: 0;
@@ -368,7 +372,7 @@ a:hover {
 
 .form-control.is-invalid,
 .was-validated .form-control:invalid {
-  border-color: #f1556c !important !important;
+  border-color: #f1556c !important;
 }
 
 .invalid-feedback {
@@ -382,7 +386,7 @@ a:hover {
   color: #ffffff;
   font-size: 1.6rem;
   line-height: 1;
-  padding: 0.6666666667rem 1rem;
+  padding: 15px 15px;
   /* // .ra__settings {
       &-outline-success {
           border-color: $purple;
@@ -576,7 +580,7 @@ body.ra__authentication .account-pages {
   align-items: center;
   justify-content: center;
   height: 100%;
-  padding-top: 1rem;
+  padding-top: 15px;
 }
 .ra__dark body.ra__authentication .account-pages {
   background-color: rgba(0, 0, 0, 0.5);
@@ -591,13 +595,13 @@ body.ra__authentication[data-sidebar-size=condensed] .logo span.logo-lg {
 .mf__account-pages__bottom {
   background-color: #ffffff;
   margin: 0;
-  padding: 1rem;
+  padding: 15px;
 }
 .ra__dark .mf__account-pages__bottom {
   background-color: #F7F2EF;
 }
 .mf__authentication .auth-logo {
-  margin-bottom: 1rem;
+  margin-bottom: 15px;
 }
 .mf__authentication .auth-logo img {
   display: inline-block;
