--- a/public/website/assets/css/frontend.css
+++ b/public/website/assets/css/frontend.css
@@ -210,6 +210,10 @@ img {
   display: block;
 }
 
+.font-size-2rem {
+  font-size: 2rem;
+}
+
 .h1 {
   line-height: 1.3;
   color: #000000;
@@ -369,7 +373,7 @@ a:hover {
   color: #f1556c !important;
 }
 .form-group {
-  margin-bottom: 2rem;
+  margin-bottom: 30px;
 }
 .form-group:last-of-type {
   margin-bottom: 0;
@@ -384,7 +388,7 @@ a:hover {
 
 .form-control.is-invalid,
 .was-validated .form-control:invalid {
-  border-color: #f1556c !important !important;
+  border-color: #f1556c !important;
 }
 
 .invalid-feedback {
@@ -398,7 +402,7 @@ a:hover {
   color: #ffffff !important;
   font-size: 1.6rem;
   line-height: 1;
-  padding: 0.6666666667rem 1rem;
+  padding: 15px 15px;
   /* // .ra__settings {
       &-outline-success {
           border-color: $purple;
@@ -575,18 +579,13 @@ a:hover {
   #header .header-nav-main nav > ul li.dropdown .dropdown-menu,
 ul.navbar-nav > li.dropdown .dropdown-menu {
     display: block;
-    padding-left: 2rem;
+    padding-left: 30px;
   }
   #header .header-nav-main nav > ul li.dropdown-log-in-out,
 ul.navbar-nav > li.dropdown-log-in-out {
     display: none;
   }
 }
-.row {
-  margin-right: 0;
-  margin-left: 0;
-}
-
 html body:not(.mf__home) .main {
   padding-top: 70px;
 }
@@ -601,8 +600,8 @@ html #header .header-body {
 }
 html #header .header-row-log-in-out {
   flex-basis: 100%;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding-top: 7.5px;
+  padding-bottom: 7.5px;
 }
 html #header .header-column-nav {
   flex-grow: 1;
@@ -648,11 +647,11 @@ html #header .header-nav-links nav > ul > li a {
   width: auto;
 }
 html #header .header-nav-links nav > ul > li a:not(.btn) {
-  padding-right: 0.5rem !important;
-  padding-left: 0.5rem !important;
+  padding-right: 7.5px !important;
+  padding-left: 7.5px !important;
 }
 html #header .header-nav-links nav > ul > li a i {
-  margin-right: 0.5rem !important;
+  margin-right: 7.5px !important;
 }
 html #header .header-nav-links nav > ul > li .dropdown-item {
   color: #ffffff;
@@ -709,13 +708,13 @@ html.sticky-header-active .header-logo {
 }
 html.sticky-header-active .header-logo a.header-logo-inner {
   display: block;
-  padding-right: 1rem;
-  padding-left: 1rem;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 @media (max-width: 991px) {
   html.sticky-header-active .header-logo a.header-logo-inner {
-    padding-right: 4rem;
-    padding-left: 4rem;
+    padding-right: 60px;
+    padding-left: 60px;
   }
 }
 @media (min-width: 992px) {
@@ -838,8 +837,8 @@ html.sticky-header-active .header-logo img {
   font-size: 3rem;
 }
 .mf__section {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 .mf__section--maroon {
   background-color: #9e3a5f;
@@ -849,7 +848,8 @@ html.sticky-header-active .header-logo img {
 }
 .mf__separator {
   background-color: #F7F2EF;
-  margin: 0 auto 1rem;
+  margin: 0 auto;
+  margin-bottom: 15px;
   width: 30%;
   height: 1px;
 }
@@ -868,31 +868,33 @@ html.sticky-header-active .header-logo img {
 }
 .mf__content h1 {
   color: #36487b;
-  margin-bottom: 0.5rem;
+  margin-bottom: 7.5px;
 }
 .mf__content p + h2 {
-  margin-top: 2rem;
+  margin-top: 30px;
 }
 .mf__content h2 {
   color: #36487b;
-  margin-bottom: 0.5rem;
+  margin-bottom: 7.5px;
 }
 .mf__section--purple .mf__content h2 {
   color: #ffffff;
 }
 .mf__content p + h3 {
-  margin-top: 2rem;
+  margin-top: 30px;
 }
 .mf__content h3 {
   color: #36487b;
   font-size: 2rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 7.5px;
 }
 .mf__section--purple .mf__content h3 {
   color: #ffffff;
 }
 .mf__content p {
-  margin-bottom: 1rem;
+  line-height: 1.5;
+  margin-bottom: 15px;
+  text-align: left;
 }
 .mf__content p:last-of-type {
   margin-bottom: 0;
@@ -911,16 +913,16 @@ html.sticky-header-active .header-logo img {
 }
 .mf__features h1 {
   color: #F7F2EF;
-  margin-bottom: 2rem;
+  margin-bottom: 30px;
   text-align: center;
 }
 .mf__features h2 {
   color: #F7F2EF;
-  margin-bottom: 1rem;
+  margin-bottom: 15px;
 }
 .mf__features p {
   color: #F7F2EF;
-  margin-bottom: 2rem;
+  margin-bottom: 30px;
 }
 .mf__features p:last-child {
   margin-bottom: 0;
@@ -928,7 +930,7 @@ html.sticky-header-active .header-logo img {
 .mf__features__row {
   align-items: flex-start;
   justify-content: flex-start;
-  margin-bottom: 4rem;
+  margin-bottom: 60px;
 }
 .mf__features__row:last-child {
   margin-bottom: 0;
@@ -937,12 +939,12 @@ html.sticky-header-active .header-logo img {
   align-self: stretch;
   background-color: rgba(0, 0, 0, 0.1);
   border-radius: 8px;
-  flex-basis: calc( ( 100% / 4 ) - ( 1rem*2 ) );
-  margin: 1rem;
+  flex-basis: calc( ( 100% / 4 ) - ( 15px*2 ) );
+  margin: 15px;
 }
 @media (max-width: 899px) {
   .mf__features__row__column {
-    flex-basis: calc( ( 100% / 2 ) - ( 1rem*2 ) );
+    flex-basis: calc( ( 100% / 2 ) - ( 15px*2 ) );
   }
 }
 @media (max-width: 599px) {
@@ -955,7 +957,7 @@ html.sticky-header-active .header-logo img {
 .mf__features__row__column--first {
   background: none;
   flex-basis: 100%;
-  margin-bottom: 1rem;
+  margin-bottom: 15px;
   text-align: center;
 }
 .mf__features__feature {
@@ -963,7 +965,7 @@ html.sticky-header-active .header-logo img {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 1rem 1rem;
+  padding: 15px 15px;
   text-align: center;
   /* @include for-phone-only {
       padding-left: 0;
@@ -995,7 +997,7 @@ html.sticky-header-active .header-logo img {
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  margin-bottom: 1rem;
+  margin-bottom: 15px;
   max-width: 48px;
   max-height: 48px;
   width: 48px;
@@ -1011,7 +1013,7 @@ html.sticky-header-active .header-logo img {
   line-height: 1.3;
 }
 .mf__features__feature h4 + p {
-  margin-top: 1rem;
+  margin-top: 15px;
 }
 .mf__features__feature p {
   font-family: "Roboto", sans-serif;
@@ -1027,12 +1029,14 @@ html.sticky-header-active .header-logo img {
 .mf__features--services div.mf__features__row {
   background-color: rgba(0, 0, 0, 0.1);
   border-radius: 8px;
-  padding-right: 1rem;
-  padding-bottom: 1rem;
-  padding-left: 1rem;
+  margin-right: 0;
+  margin-left: 0;
+  padding-right: 15px;
+  padding-bottom: 15px;
+  padding-left: 15px;
 }
 .mf__features--services div.mf__features__row:first-of-type {
-  margin-top: 1rem;
+  margin-top: 15px;
 }
 .mf__video {
   background-color: #F7F2EF;
@@ -1051,38 +1055,14 @@ html.sticky-header-active .header-logo img {
   background-color: #000000;
   color: #ffffff;
 }
-.mf__register__buttons__inner {
-  align-items: flex-start;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-}
-@media (max-width: 599px) {
-  .mf__register__buttons__inner {
-    flex-wrap: wrap;
-  }
-}
-.mf__register__buttons__inner > * {
-  flex: 0 0 auto;
-}
-@media (max-width: 599px) {
-  .mf__register__buttons__inner > * {
-    flex-basis: 100%;
-  }
-}
 .mf__register__buttons__col {
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 8px;
   display: flex;
   flex-direction: column;
-  flex-basis: calc( ( 100% / 2 ) - ( 1rem*2 ) );
-  height: 100%;
-  margin: 1rem;
-  padding: 2rem;
-  /* &:last-child {
-      padding-right: 0;
-      padding-bottom: 0;
-  } */
+  flex-basis: calc( ( 100% / 2 ) - ( 15px*2 ) );
+  margin: 15px;
+  padding: 30px;
 }
 @media (max-width: 899px) {
   .mf__register__buttons__col {
@@ -1094,7 +1074,7 @@ html.sticky-header-active .header-logo img {
   color: #ffffff;
   font-size: 3rem;
   line-height: 1;
-  margin-bottom: 2rem;
+  margin-bottom: 30px;
 }
 .mf__register__buttons__info {
   display: flex;
@@ -1104,7 +1084,7 @@ html.sticky-header-active .header-logo img {
 }
 .mf__register__buttons__p {
   color: #ffffff;
-  margin-bottom: 2rem;
+  margin-bottom: 30px;
 }
 .mf__register__buttons__button {
   align-self: flex-end;
@@ -1114,40 +1094,21 @@ html.sticky-header-active .header-logo img {
   font-size: 1.8rem;
   font-weight: 700;
   line-height: 1.5;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 .mf__footer#footer {
-  background: url("/website/assets/images/bg2s.jpg") no-repeat center center;
+  background: url("../../assets/images/bg2s.jpg") no-repeat center center;
   background-size: cover;
   border: none;
-  padding: 6rem 0 !important;
-}
-.mf__footer__inner {
-  align-items: flex-start;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-@media (max-width: 599px) {
-  .mf__footer__inner {
-    flex-wrap: wrap;
-  }
-}
-.mf__footer__inner > * {
-  flex: 0 0 auto;
-}
-@media (max-width: 599px) {
-  .mf__footer__inner > * {
-    flex-basis: 100%;
-  }
+  align-items: center;
+  min-height: 350px;
 }
 .mf__footer__col {
   display: flex;
-  padding: 4rem;
-  padding-right: 2rem;
-  padding-left: 0;
-  /* &:first-child {
-      justify-content: flex-start;
-  } */
+  flex-basis: 25%;
+  padding: 15px;
 }
 @media (max-width: 899px) {
   .mf__footer__col {
@@ -1158,15 +1119,14 @@ html.sticky-header-active .header-logo img {
   .mf__footer__col {
     flex-basis: 100%;
     justify-content: center;
-    padding-right: 0;
     text-align: center;
   }
 }
-.mf__footer__col:last-child {
-  padding-right: 0;
-}
 .mf__footer__col__inner__li {
-  margin-bottom: 2rem;
+  margin-bottom: 15px;
+}
+.mf__footer__col__inner__li:first-of-type {
+  margin-bottom: 7.5px;
 }
 .mf__footer__col__inner__li:last-child {
   margin-bottom: 0;
@@ -1193,22 +1153,14 @@ html.sticky-header-active .header-logo img {
   color: #ffffff !important;
   text-decoration: underline !important;
 }
-.mf__footer__socials__social {
-  margin-bottom: 0 !important;
-  padding-right: 1rem;
-}
-.mf__footer__socials__social:last-child {
-  padding-right: 0;
-}
-.mf__footer__socials__social--first {
-  display: block;
-  margin-bottom: 2rem !important;
-  padding-right: 0;
-}
-.mf__footer__socials :not(.mf__footer__socials__social--first) {
+.mf__footer__col__inner--socials li:not(:first-of-type) {
   display: inline-block;
+  padding-right: 15px;
 }
-.mf__footer__socials i {
+.mf__footer__col__inner--socials li:last-of-type {
+  padding-right: 0;
+}
+.mf__footer__col__inner--socials i {
   color: #ffffff;
   font-size: 3rem;
 }
