--- a/resources/sass/_forms.scss
+++ b/resources/sass/_forms.scss
@@ -26,7 +26,7 @@ input:focus {
     }
 
     .text-color-danger {
-        color: $form-error-color;
+        color: $form-required-color;
     }
 
     /* &-row {
