--- a/resources/sass/frontend.scss
+++ b/resources/sass/frontend.scss
@@ -6,11 +6,6 @@
 @import '_alerts';
 @import '_nav';
 
-.row {
-    margin-right: 0;
-    margin-left: 0;
-}
-
 html {
     body:not(.mf__home) .main {
         padding-top: 70px;
@@ -296,8 +291,8 @@ html.sticky-header-active .header-logo {
 
     &#{$es}separator {
         background-color: $cream;
-        // display: inline-block;
-        margin: 0 auto $margin;
+        margin: 0 auto;
+        margin-bottom: $margin;
         width: 30%;
         height: 1px;
 
@@ -340,7 +335,9 @@ html.sticky-header-active .header-logo {
         }
 
         p {
+            line-height: 1.5;
             margin-bottom: $margin;
+            text-align: left;
 
             &:last-of-type {
                 margin-bottom: 0;
@@ -401,7 +398,9 @@ html.sticky-header-active .header-logo {
         &#{$es}row {
             align-items: flex-start;
             justify-content: flex-start;
+            // margin-right: -$margin;
             margin-bottom: $margin*4;
+            // margin-left: -$margin;
 
             &:last-child {
                 margin-bottom: 0;
@@ -494,7 +493,6 @@ html.sticky-header-active .header-logo {
 
         &#{$ms}benefits {
             background-color: var(--maroon);
-            // margin-bottom: $margin*2;
         }
 
         &#{$ms}services {
@@ -503,6 +501,8 @@ html.sticky-header-active .header-logo {
             div.mf__features__row {
                 background-color: rgba( $black, 0.1 );
                 border-radius: $border-radius;
+                margin-right: 0;
+                margin-left: 0;
                 padding-right: $padding;
                 padding-bottom: $padding;
                 padding-left: $padding;
@@ -532,33 +532,18 @@ html.sticky-header-active .header-logo {
         background-color: var(--black);
         color: var(--white);
 
-        &#{$es}inner {
-            @include display-flex(
-                $align-items: flex-start,
-                $justify-content: flex-start
-            );
-        }
-
         &#{$es}col {
             background-color: rgba( $white, 0.1 );
             border-radius: $border-radius;
             display: flex;
             flex-direction: column;
             flex-basis: calc( ( 100% / 2 ) - ( #{ $margin }*2 ) );
-            height: 100%;
             margin: $margin;
             padding: $padding*2;
-
-            /* &:last-child {
-                padding-right: 0;
-                padding-bottom: 0;
-            } */
 
             @include for-tablet-landscape-down {
                 flex-basis: 100%;
                 height: auto;
-                // padding-right: 0;
-                // padding-bottom: $padding*4;
             }
         }
 
@@ -589,36 +574,26 @@ html.sticky-header-active .header-logo {
             font-size: 1.8rem;
             font-weight: 700;
             line-height: 1.5;
+            padding-top: $padding/1.5;
+            padding-bottom: $padding/1.5;
         }
     }
     // end Home
 
     &#{$es}footer {
         &#footer {
-            background: url( '/website/assets/images/bg2s.jpg' ) no-repeat center center;
+            background: url( '../../assets/images/bg2s.jpg' ) no-repeat center center;
             background-size: cover;
             border: none;
-            padding: $padding*6 0 !important;
-        }
-
-        // > .row {
-            // display: flex;
-            // align-items: center;
-            // justify-content: center;
-        // }
-
-        &#{$es}inner {
-            @include display-flex(
-                $align-items: flex-start
-            );
+            display: flex;
+            align-items: center;
+            min-height: 350px;
         }
 
         &#{$es}col {
             display: flex;
-            // flex-basis: 25%;
-            padding: $padding*4;
-            padding-right: $padding*2;
-            padding-left: 0;
+            flex-basis: 25%;
+            padding: $padding;
 
             @include for-tablet-landscape-down{
                 flex-basis: 50%;
@@ -627,22 +602,16 @@ html.sticky-header-active .header-logo {
             @include for-phone-only{
                 flex-basis: 100%;
                 justify-content: center;
-                padding-right: 0;
                 text-align: center;
-            }
-
-            /* &:first-child {
-                justify-content: flex-start;
-            } */
-
-            &:last-child {
-                // justify-content: flex-end;
-                padding-right: 0;
             }
 
             &#{$es}inner {
                 &#{$es}li {
-                    margin-bottom: $margin*2;
+                    margin-bottom: $margin;
+
+                    &:first-of-type {
+                        margin-bottom: $margin/2;
+                    }
 
                     &:last-child {
                         margin-bottom: 0;
@@ -676,36 +645,24 @@ html.sticky-header-active .header-logo {
                         text-decoration: underline !important;
                     }
                 }
-            }
-        }
 
-        &#{$es}socials {
-            // display: flex;
-            // flex-wrap: wrap;
+                &#{$ms}socials {
+                    li {
+                        &:not(:first-of-type) {
+                            display: inline-block;
+                            padding-right: $padding;
+                        }
 
-            &#{$es}social {
-                margin-bottom: 0 !important;
-                padding-right: $padding;
+                        &:last-of-type {
+                            padding-right: 0;
+                        }
+                    }
 
-                &:last-child {
-                    padding-right: 0;
+                    i {
+                        color: $white;
+                        font-size: 3rem;
+                    }
                 }
-            }
-
-            &#{$es}social--first {
-                display: block;
-                // flex-basis: 100%;
-                margin-bottom: $margin*2 !important;
-                padding-right: 0;
-            }
-
-            & :not(&#{$es}social--first) {
-                display: inline-block;
-            }
-
-            i {
-                color: $white;
-                font-size: 3rem;
             }
         }
     }
